--- a/src/plugin/css/_custom-animations.scss
+++ b/src/plugin/css/_custom-animations.scss
@@ -45,7 +45,8 @@
 }
 
 .wordchargroup.baseline {
-	overflow: hidden
+	overflow: hidden;
+	display: block;
 }
 
 /* Custom Appearance animation classes */
